--- a/app/src/main/res/layout/add_records.xml
+++ b/app/src/main/res/layout/add_records.xml
@@ -12,7 +12,7 @@
         android:background="@drawable/edit_background"
         android:ems="10"
         android:hint="Systolic"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:paddingLeft="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,7 @@
         android:ems="10"
         android:hint="Diastolic"
         android:paddingLeft="10dp"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:background="@drawable/edit_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
         android:background="@drawable/edit_background"
         android:ems="10"
         android:hint="Heart rate"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:paddingLeft="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
