--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -8,7 +8,8 @@
     android:layout_marginEnd="16dp"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
-    app:cardCornerRadius="8dp">
+    app:cardCornerRadius="8dp"
+    android:id="@+id/item">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,7 +18,8 @@
         android:orientation="vertical"
         android:padding="20dp"
         android:elevation="8dp"
-        android:background="#9DB1EA">
+        android:background="#9DB1EA"
+        android:layout_marginTop="70dp">
 
         <TextView
             android:id="@+id/date"
